--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ trio-websocket==0.7.0
 triopg==0.3.0
 requests-toolbelt==0.9.1
 aiocontextvars==0.2.2
+asyncio-contextmanager==1.0.1
+triogram==0.1.4
 git+https://github.com/kostyll/remi@python3.6-trio#egg=remi
